# MWCEditor

./: .gitignore  CMakeLists.txt
MWCeditor/: MWCeditor.rc  Main.h  dlgprocs.cpp  externs.cpp  externs.h  grouping.cpp  main.cpp  map.h  mwce.ini  resource.h  resource.h.tmp  structs.h  utils.cpp  utils.h  variable.cpp  variable.h  version.h
